--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "servicenow",
+  "name": "node-servicenow",
   "version": "1.0.0",
   "description": "Node module for using the ServiceNow api.",
   "main": "index.js",
